--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,6 +12,11 @@
                     <%= post.created_at&.strftime('%Y年%m月%d日 %H:%M') || '日時不明' %>
                 </small>
             </span>
+            <div class="edit-delete-wrapper">
+                <%= link_to "編集", edit_post_path(post), class: "link-button" %>
+                <%= button_to "削除", post_path(post), method: :delete,  class: "delete-button" %>
+            </div>
+
         </li>
     <% end %>
 </ul>
