--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -12,8 +12,8 @@
   </div>
 
   <div class="form-actions">
-    <%= form.submit "更新", class: "submit-button" %>
+    <%= form.submit "更新", class: "link-button" %>
   </div>
 <% end %>
 
-<%= link_to "戻る", posts_path, class: "back-link" %>
+<%= link_to "戻る", posts_path, class: "link-button" %>
